Bruke definerende vilkår